--- a/index.html
+++ b/index.html
@@ -127,11 +127,9 @@
     <img src="profile.jpg" alt="Profile Picture" class="profile-pic" id="profileImage">
     <div class="upload-icons">
       <label>
-        🖼️ Upload Cover Photo
         <input type="file" accept="image/*" onchange="changeCover(event)" hidden>
       </label>
       <label>
-        👤 Upload Profile Photo
         <input type="file" accept="image/*" onchange="changeProfile(event)" hidden>
       </label>
     </div>
@@ -177,7 +175,11 @@
   <section id="projects">
     <h2>Projects</h2>
     <ul>
-      <li>3D Analysis of Kiln Shell Profile</li>
+    <li>Kiln slope correction & alignment</li>
+     <li>Plan & Elevation view setup</li>
+     <li>Floating kiln analysis for efficiency</li>
+     <li>Shell profile 3D analysis</li>
+     <li>Thermal expansion and balancing</li>
       <li>ML Model for Predicting Equipment Failure</li>
       <li>AI-Based Rotary Kiln Alignment Advisor</li>
     </ul>
@@ -205,8 +207,10 @@
   <footer>
     <p>I will be happy to be of any help to you. You can contact me anytime. Believe me, I'm a good listener and will try to resolve your concern. <br>Thank you ❤️</p>
     <div class="ticker">
-      <p>JSW Steel &nbsp;&nbsp;&nbsp; Tata Steel &nbsp;&nbsp;&nbsp; SRF &nbsp;&nbsp;&nbsp; Allan Smith Engineering &nbsp;&nbsp;&nbsp; Larsen & Toubro &nbsp;&nbsp;&nbsp; Shree Cement</p>
-    </div>
+  <p>
+    Andhra Paper &nbsp;&nbsp;&nbsp; Andritz &nbsp;&nbsp;&nbsp; Allan Smith Engineering &nbsp;&nbsp;&nbsp; Balarsha Paper Mill &nbsp;&nbsp;&nbsp; Birla Carbon &nbsp;&nbsp;&nbsp; Epsilon Carbon &nbsp;&nbsp;&nbsp; Gaillant &nbsp;&nbsp;&nbsp; Girdhan Metal &nbsp;&nbsp;&nbsp; Godavari Ispat &nbsp;&nbsp;&nbsp; Hindalco &nbsp;&nbsp;&nbsp; Jindal Saw &nbsp;&nbsp;&nbsp; JSW Steel &nbsp;&nbsp;&nbsp; Larsen & Toubro &nbsp;&nbsp;&nbsp; Loydes &nbsp;&nbsp;&nbsp; NCL &nbsp;&nbsp;&nbsp; Reliance &nbsp;&nbsp;&nbsp; Shree Cement &nbsp;&nbsp;&nbsp; Shyam Steel &nbsp;&nbsp;&nbsp; Silox &nbsp;&nbsp;&nbsp; SRF &nbsp;&nbsp;&nbsp; Tata Steel &nbsp;&nbsp;&nbsp; Vishnu Chemical
+  </p>
+</div>
   </footer>
 
   <script>
