--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
     <div class="password-section">
       <label for="password">Enter Password:</label>
       <input type="password" id="password">
-      <button onclick="unlockNotes(xyz)">Unlock</button>
+      <button onclick="unlockNotes()">Unlock</button>
     </div>
     <div id="notesLink" style="display:none; margin-top: 15px;">
       <a href="https://docs.google.com/document/d/your-note-id" target="_blank">Open Notes (Google Doc)</a>
