--- a/index.html
+++ b/index.html
@@ -1,191 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Allan Smith Task Portal</title>
-
-<style>
-body {
-    font-family: Arial, sans-serif;
-    background: linear-gradient(to right, #4facfe, #00f2fe);
-    text-align: center;
-    color: white;
-    margin: 0;
-    padding: 0;
-}
-/* Header with cover photo as background */
-header {
-    position: relative;
-    background-image: url('cover-photo.jpg');
-    background-size: cover;
-    background-position: center;
-    height: 300px; /* Adjust as needed */
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-/* Logo positioned over the cover photo */
-.logo {
-    position: absolute;
-    top: 20px;
-    left: 20px;
-    height: 100px; /* Adjust size as needed */
-}
-.portal-container {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    margin-top: 20px;
-}
-.portal {
-    background: rgba(255, 255, 255, 0.2);
-    padding: 15px 30px;
-    margin: 10px;
-    border-radius: 10px;
-    cursor: pointer;
-    font-size: 20px;
-    transition: 0.3s;
-}
-.portal:hover {
-    background: rgba(255, 255, 255, 0.5);
-}
-.welcome-message {
-    margin-top: 20px;
-    font-size: 22px;
-    font-weight: bold;
-    padding: 10px;
-}
-.site-status {
-    margin: 20px auto;
-    max-width: 800px;
-    background: rgba(0, 0, 0, 0.2);
-    padding: 15px;
-    border-radius: 10px;
-}
-.experts {
-    margin: 30px auto;
-    padding: 20px;
-    max-width: 800px;
-    background: rgba(255, 255, 255, 0.2);
-    border-radius: 10px;
-}
-/* Override the experts heading: bold and black */
-.experts h2 {
-    color: black !important;
-    font-weight: bold !important;
-}
-.expert-item {
-    display: flex;
-    align-items: center;
-    margin: 10px 0;
-}
-.expert-img {
-    width: 80px;
-    height: 80px;
-    border-radius: 50%;
-    object-fit: cover;
-    margin-right: 15px;
-}
-.expert-details {
-    text-align: left;
-    color: #ffff00; /* Expert details remain in yellow */
-}
-#sheet-container {
-    display: none;
-    margin-top: 20px;
-}
-footer {
-    margin-top: 30px;
-    padding: 10px;
-    background: rgba(0, 0, 0, 0.2);
-}
-@media (max-width: 600px) {
-    .portal-container {
-        flex-direction: column;
-        align-items: center;
-    }
-    .logo {
-        height: 60px;
-        top: 10px;
-        left: 10px;
-    }
-}
-</style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Rahul Jha | My Journey</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-<!-- Header with cover photo background and logo -->
-<header>
-<img src="logo.png" alt="Company Logo" class="logo">
-</header>
+  <header>
+    <h1>Rahul Jha</h1>
+    <p>Mechanical Engineer | Kiln Specialist | AI Enthusiast</p>
+  </header>
 
-<div class="welcome-message">
-Welcome to Allan Smith Task Portal
-</div>
+  <nav>
+    <a href="#about">About Me</a>
+    <a href="#skills">My Skills</a>
+    <a href="#hobbies">Hobbies</a>
+    <a href="#gallery">Gallery</a>
+    <a href="#contact">Contact</a>
+    <a href="#message">Message</a>
+  </nav>
 
-<div class="portal-container">
-    <div class="portal" onclick="window.open('https://forms.gle/AR6n6kSKjc7GRiDF7', '_blank');">
-        Employee Portal
-    </div>
-    <div class="portal" onclick="window.open('https://forms.gle/r5dfrSkoWEYC1iGN6', '_blank');">
-        Customer Portal
-    </div>
-    <div class="portal" onclick="window.open('kiln-technicality.html', '_blank');">
-        Kiln Technicality
-    </div>
-</div>
+  <section id="about">
+    <h2>About Me</h2>
+    <p>
+      Hello! I’m Rahul Jha from Bihar. I completed my Mechanical Engineering from RTU (2020).
+      I’ve worked at JSW Steel and currently at Allan Smith Engineering Pvt. Ltd.
+      Passionate about combining Mechanical Engineering with AI.
+    </p>
+  </section>
 
-<!-- Site Current Status Section with password-protected Google Sheet -->
-<div class="site-status">
-<h2>Site Current Status</h2>
-<button onclick="checkPassword()" style="padding:10px 20px; font-size:16px; cursor:pointer;">View Status</button>
-<div id="sheet-container" style="display:none; margin-top:20px;">
-<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQoU9VL7RZRcyup88teZP1WBxswEuPijOz5HK0Uy_gFdm6P1IE5rxqiOvkaOi459DdCpeWFDjGxwrob/pubhtml?widget=true&amp;headers=false" width="100%" height="400" frameborder="0" scrolling="no"></iframe>
-</div>
-</div>
+  <section id="skills">
+    <h2>My Skills & Expertise</h2>
+    <ul>
+      <li>Rotary Kiln Alignment</li>
+      <li>Hot & Cold Kiln Services</li>
+      <li>SolidWorks & Design</li>
+      <li>Python for Engineering Applications</li>
+      <li>Basic AI & ML Understanding</li>
+    </ul>
+  </section>
 
-<script>
-function checkPassword() {
-    var pwd = prompt("Enter password to view current status:");
-    if (pwd === "yourpassword") { // Replace with your password
-        document.getElementById("sheet-container").style.display = "block";
-    } else {
-        alert("Access Denied!");
-    }
-}
-</script>
+  <section id="hobbies">
+    <h2>Hobbies</h2>
+    <ul>
+      <li>✍️ Shayari – Expressing feelings through words</li>
+      <li>🌍 Traveling – Exploring nature and new places</li>
+      <li>📸 Photography – Capturing memories</li>
+    </ul>
+  </section>
 
-<!-- Experts Section -->
-<div class="experts">
-<h2>Our Technical Experts</h2>
-<div class="expert-item">
-    <img src="Shailesh Kumar.jpg" alt="Shailesh Kumar" class="expert-img">
-    <div class="expert-details">
-        <p><strong>Shailesh Kumar</strong></p>
-        <p>Sr. Technical Expert</p>
-        <p>shailesh@smithengg.in</p>
+  <section id="gallery">
+    <h2>My Photos</h2>
+    <div class="gallery">
+      <img src="assets/images/photo1.jpg" alt="Me 1">
+      <img src="assets/images/photo2.jpg" alt="Me 2">
+      <img src="assets/images/photo3.jpg" alt="Work site">
     </div>
-</div>
-<div class="expert-item">
-    <img src="pratik Badkhal.jpg" alt="Pratik Badkhal" class="expert-img">
-    <div class="expert-details">
-        <p><strong>Pratik Badkhal</strong></p>
-        <p>Sr. Executive Engineer</p>
-        <p>+918806053306</p>
-    </div>
-</div>
-<div class="expert-item">
-    <img src="Mrs.Nidhi.jpg" alt="Mrs.Nidhi" class="expert-img">
-    <div class="expert-details">
-        <p><strong>Mrs.Nidhi</strong></p>
-        <p>Technical Consultant</p>
-        <p>+919004676484</p>
-    </div>
-</div>
-</div>
+  </section>
 
-<footer>
-&copy; Welcome to Allan Smith Task Portal.
-</footer>
+  <section id="contact">
+    <h2>Contact Me</h2>
+    <p>Email: rahul.jha@email.com</p>
+    <p>LinkedIn: <a href="https://linkedin.com/in/rahul-jha" target="_blank">My Profile</a></p>
+  </section>
+
+  <section id="message">
+    <h2>A Friendly Note</h2>
+    <p>
+      I'm happy to help you if you want to share something or just be a friend.
+      Trust me, I'm a good listener. Haha! 😄
+    </p>
+  </section>
+
+  <footer>
+    <p>© 2025 Rahul Jha. All rights reserved.</p>
+  </footer>
 </body>
 </html>
